Add `--add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED`, conditionally (#51)
Fixes #49