@@ -74,7 +74,8 @@
                     ["-Sdeps"
                      (pr-str '{:deps {nrepl/nrepl {:mvn/version "1.0.0"} cider/cider-nrepl {:mvn/version "0.36.0"} refactor-nrepl/refactor-nrepl {:mvn/version "3.9.0"}} :aliases {:cider/nrepl {:main-opts ["-m" "nrepl.cmdline" "--middleware" "[refactor-nrepl.middleware/wrap-refactor,cider.nrepl/cider-middleware]"]}}})
                      "-M:dev:test:cider/nrepl"]
-                    false)]
+                    false)
+        opens "-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"]
     (testing v
       (is (string/starts-with? v
                                "clojure -Sforce -Srepro -J-XX:-OmitStackTraceInFastThrow -J-Dclojure.main.report=stderr -Scp")
@@ -84,4 +85,7 @@
           "Adds cider-nrepl's --main program based on the -Sdeps and -M args")
       (is (string/includes? v
                             ".m2/repository/cider/cider-nrepl/0.36.0/cider-nrepl-0.36.0.jar")
-          "Adds the cider-nrepl dep and program based on the -Sdeps and -M args"))))
+          "Adds the cider-nrepl dep and program based on the -Sdeps and -M args")
+      (if (jdk/jdk8?)
+        (is (not (string/includes? v opens)))
+        (is (string/includes? v opens))))))
